--- a/package.json
+++ b/package.json
@@ -23,9 +23,16 @@
   "dependencies": {
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
+    "dotenv": "^16.5.0",
+    "nest-winston": "^1.10.2",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "winston-slack-webhook-transport": "^2.3.6",
+    "winston-transport": "^4.9.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
