--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,13 +48,14 @@ jobs:
           curl -X POST ${{ secrets.SLACK_WEBHOOK_URL }} \
           -H 'Content-type: application/json' \
           --data "{
-            \"text\": \"✅ *Deployment Successful*\n
-            *📦 App:* NestJS Application\n
-            *🌍 Environment:* Production\n
-            *🌱 Branch:* ${{ github.ref_name }}\n
-            *👤 Triggered by:* ${{ github.actor }}\n
-            *📅 Time:* $(date -u +'%Y-%m-%d %H:%M:%S UTC')\n
-            *🔗 Workflow:* https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}\"
+          \"text\": \"✅ *DEPLOYMENT SUCCESSFUL*\n\`\`\`
+          📦 App: Demo CI/CD
+          🌍 Environment: Production
+          🌱 Branch: ${{ github.ref_name }}
+          👤 Triggered by: ${{ github.actor }}
+          📅 Time: $(date -u +'%Y-%m-%d %H:%M:%S UTC')
+          🔗 Workflow: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+          \`\`\`\"
           }"
 
       - name: ❌ Notify Slack if failure
@@ -65,7 +66,7 @@ jobs:
           -H 'Content-type: application/json' \
           --data "{
             \"text\": \"❌ *Deployment Failed*\n
-            *📦 App:* NestJS Application\n
+            *📦 App:* Demo CI/CD\n
             *🌍 Environment:* Production\n
             *🌱 Branch:* ${{ github.ref_name }}\n
             *👤 Triggered by:* ${{ github.actor }}\n
